feat: profile view endpoint
