# pkg/router/profile.go
@@ -1,0 +1,25 @@
+package router
+
+import (
+	"fmt"
+
+	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
+	"github.com/hngprojects/telex_be/external/request"
+	"github.com/hngprojects/telex_be/pkg/controller/profile"
+	"github.com/hngprojects/telex_be/pkg/middleware"
+	"github.com/hngprojects/telex_be/pkg/repository/storage"
+	"github.com/hngprojects/telex_be/utility"
+)
+
+func Profile(r *gin.Engine, ApiVersion string, validator *validator.Validate, db *storage.Database, logger *utility.Logger) *gin.Engine {
+	extReq := request.ExternalRequest{Logger: logger, Test: false}
+	userProfile := profile.Controller{Db: db, Validator: validator, Logger: logger, ExtReq: extReq}
+
+	profileUrl := r.Group(fmt.Sprintf("%v", ApiVersion), middleware.Authorize(db.Postgresql))
+	{
+		profileUrl.GET("/profile", userProfile.GetUserProfile)
+	}
+
+	return r
+}
